--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^6.7.0",
     "react-native-web": "~0.13.12",
     "validate-color": "^2.1.1"
