--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "color": "^3.1.3",
@@ -27,7 +28,7 @@
     "react-native-screens": "^3.3.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^6.7.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.16.5",
     "validate-color": "^2.1.1"
   },
   "devDependencies": {
