--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^6.7.0",
     "react-native-web": "^0.16.5",
+    "react-navigation": "^4.4.4",
     "validate-color": "^2.1.1"
   },
   "devDependencies": {
